--- a/src/components/record-view/record-view.scss
+++ b/src/components/record-view/record-view.scss
@@ -4,7 +4,8 @@
 
 :host {
     display: block;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
 }
 
